fix flex wrap

--- a/src/styles/components/FlexGroup.module.scss
+++ b/src/styles/components/FlexGroup.module.scss
@@ -1,6 +1,9 @@
 .group {
     padding: 1rem;
+    width: 100%;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 2rem;
     outline: solid 1px #e6e6e6;
