--- a/src/styles/components/Group.module.scss
+++ b/src/styles/components/Group.module.scss
@@ -1,6 +1,7 @@
 
 .group {
     padding: 1rem;
+    width: 100%;
     justify-content: space-around;
     margin-top: 2rem;
     outline: solid 1px #e6e6e6;
